# rust

./: .gitignore  README.md
basic-microservices/: Cargo.toml
basic-microservices-rocket/: .env  Cargo.toml
basic-microservices-rocket/migrations/2019-01-20-185612_models/: down.sql  up.sql
basic-microservices-rocket/src/: db.rs  main.rs  models.rs
basic-microservices-rocket/static/home/: index.html
basic-microservices-rocket/static/home/css/: main.min.css
basic-microservices/src/: main.rs
ccollections/: Cargo.toml
ccollections/src/: main.rs
closure/: Cargo.toml
closure/src/: main.rs
cmdlineargs/: Cargo.toml
cmdlineargs/src/: main.rs
enumplay/: Cargo.toml
enumplay/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
imgtool/: Cargo.toml
imgtool/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
mutexex/: Cargo.toml
mutexex/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
playground/: Cargo.toml
playground/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
simplegrep/: Cargo.toml  test.h
simplegrep/src/: lib.rs  main.rs
structs/: Cargo.toml
structs/src/: main.rs
threads/: Cargo.toml
threads/src/: main.rs
webassembly/: Cargo.toml  LICENSE_MIT
webassembly/src/: lib.rs
