[package]
name = "basic-microservices-rocket"
version = "0.1.1"
authors = ["Leonardo Razovic <lrazovic@gmail.com>"]
edition = "2018"

[dependencies]
rocket_codegen = "0.4.0"
rocket = "0.4.0"
serde = "1.0.85"
serde_json = "1.0.36"
serde_derive = "1.0.85"
diesel = { version = "1.4", features = ["r2d2","postgres"] }
r2d2 = "0.8.3"
dotenv = "0.13.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "serve"]
